--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ h1{
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
+
 #navBar{
     width: 100%;
     height: 75px;
@@ -71,8 +72,7 @@ h1{
 
 #mainContent{
     margin: 30px auto;
-    padding:  15px;
-    width: 960px;
+    max-width: 960px;
     border: 1px solid #dddddd;
 }
 
@@ -82,6 +82,14 @@ h1{
     border-bottom: 2px solid #777777;
 }
 
+.aboutMe {
+    margin: 30px;
+}
+
 .bioSection {
     display: flex;
+}
+
+.aboutMe img {
+    margin: 0 15px 15px 0;
 }
