--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,8 @@ body{
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
     color: #777777;
+    background-image: url("../images/sativa.png");
+    background-repeat: repeat;
 }
 
 header {
@@ -12,6 +14,16 @@ header {
 
 h1{
     font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+footer{
+    position: fixed;
+    bottom: 0px;
+    width: 100%;
+    background-color: #666666;
+    padding: 20px 0 10px 0;
+    text-align: center;
+    color: #CCCCCC;
 }
 
 
@@ -73,6 +85,7 @@ h1{
 #mainContent{
     margin: 30px auto;
     max-width: 960px;
+    background-color: #ffffff;
     border: 1px solid #dddddd;
 }
 
@@ -86,10 +99,9 @@ h1{
     margin: 30px;
 }
 
-.bioSection {
-    display: flex;
-}
 
 .aboutMe img {
     margin: 0 15px 15px 0;
+    float: left;
 }
+
