--- a/css/style.css
+++ b/css/style.css
@@ -105,3 +105,25 @@ footer{
     float: left;
 }
 
+input.inputRow{
+    height: 25px;
+    width: 100%;
+    margin: 5px 0 15px 0;
+}
+
+.msgArea {
+    margin-top: 5px;
+    width: 100%;
+    height: 250px;
+    border: 1px solid #ccc;
+}
+
+button.submit{
+    margin-top:10px;
+    height: 30px;
+    width: 80px;
+    background-color: #777777;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #fff;
+    font-size: 15px;
+}
