--- a/css/style.css
+++ b/css/style.css
@@ -95,12 +95,13 @@ footer{
     border-bottom: 2px solid #777777;
 }
 
-.aboutMe {
+.contentInner {
+    position: relative;
     margin: 30px;
 }
 
 
-.aboutMe img {
+.contentInner img {
     margin: 0 15px 15px 0;
     float: left;
 }
@@ -112,7 +113,7 @@ input.inputRow{
 }
 
 .msgArea {
-    margin-top: 5px;
+    margin-top: px;
     width: 100%;
     height: 250px;
     border: 1px solid #ccc;
@@ -126,4 +127,23 @@ button.submit{
     font-family: Arial, Helvetica, sans-serif;
     color: #fff;
     font-size: 15px;
+}
+
+.portfolio{
+    display: flex;
+    width: 100%;
+    min-height: 100px;
+    background-color: blue;
+}
+
+.portfolioItem{
+    display: flex;
+    width: 150px;
+    height: 150px;
+    background-color: grey;
+    margin: 15px
+}
+
+.wrap{
+    flex-wrap: wrap;
 }
