added stock images to the image folder. modified css to style the portfolio page. needs further styling.

--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,8 @@ footer{
 
 
 .contentInner img {
+    height: 100%;
+    overflow: 
     margin: 0 15px 15px 0;
     float: left;
 }
@@ -133,15 +135,30 @@ button.submit{
     display: flex;
     width: 100%;
     min-height: 100px;
-    background-color: blue;
+    margin: 0 -10px;
 }
 
 .portfolioItem{
     display: flex;
-    width: 150px;
-    height: 150px;
+    width: 275px;
+    height: 275px;
     background-color: grey;
-    margin: 15px
+    margin: 15px;
+}
+
+.portfolioItem label{
+    position: relative;
+    z-index: 2;
+    bottom: 50px;
+    width: 100%;
+    padding: 20px 0;
+    background-color: #777777;
+    color: white
+}
+
+.portfolioItem img {
+    height: 100%;
+    overflow: hidden;
 }
 
 .wrap{
